# OpenLLM

./: .gitignore  README.md  README.zh.md  pyproject.toml  requirements.txt  setup.py
cli/: main.py
config/: compression.yaml  models.yaml
docs/: 2026-04-18-model-tester-design.md  2026-04-18-model-tester-plan.md  README.zh.md  admin-guide.md  agent-guide.md  api.md  api.zh.md  architecture.md  architecture.zh.md  cli.md  cli.zh.md  compression-guide.md  configuration.md  configuration.zh.md  deployment.md  extension.md  extension.zh.md  prompt-enhancement.md  sandbox-guide.md  session-tracker.md  terse-integration-plan.md
openllm/: __init__.py
openllm/cli/: __init__.py  main.py
openllm/config/: settings.json
openllm/src/: __init__.py  context.py  dispatcher.py  enums.py  registry.py  router.py  scorer.py  server.py
openllm/tests/: __init__.py  test_adapters.py  test_discover.py
src/: adapter_model.py  agent_middleware.py  agent_registry.py  cache_awareness.py  code_thinking.py  complexity_scorer.py  compression_strategy.py  context.py  dispatcher.py  enums.py  freeride.py  git_diff_compressor.py  history_summarizer.py  limiter.py  models.py  prompt_enhancer.py  registry.py  router.py  server.py  session_router.py  session_tracker.py  terse_mode.py  tester.py  token_monitor.py  token_optimizer.py
src/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  (+1 more)
tests/: test_adapters.py  test_complexity_scorer.py  test_compression_strategy.py  test_discover.py  test_freeride.py  test_phase4.py  test_phase5.py  test_tester.py  test_token_optimizer.py
(+18 files in other folders)
